[Modified] OC-1018 #comment Made some optimisations. Fixed bugs #time 4h